[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="FileSelect" type="FileDialog" parent="."]
margin_left = 197.0
margin_top = 144.5
margin_right = 828.0
margin_bottom = 450.5
window_title = "Select Audio File..."
mode_overrides_title = false
mode = 0
access = 2
current_dir = "c:/users"
current_file = "users"
current_path = "c:/users/users"

[node name="ChangeSong" type="Button" parent="."]
margin_left = 16.5
margin_top = 15.0
margin_right = 410.5
margin_bottom = 66.0
text = "Change Song"

[node name="Player" type="AudioStreamPlayer" parent="."]

[node name="ForceQuit" type="Button" parent="."]
margin_left = 804.0
margin_top = 7.5
margin_right = 1018.0
margin_bottom = 69.5
text = "QUIT"

